cf-for-k8s/config/prometheus-operator/alertmanager-virtual-service.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-virtual-service
  namespace: prometheus-operator
spec:
  hosts:
    - alertmanager.vcap.me
  gateways:
    - cf-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: prometheus-operator-alertmanager.prometheus-operator.svc.cluster.local
            port:
              number: 9093
